docs(spring-mini): README.md新增报错修复措施